--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/supabase-js": "^2.38.4",
     "autoprefixer": "10.4.15",
     "next": "latest",
     "postcss": "8.4.29",
