--- a/package.json
+++ b/package.json
@@ -1,53 +1,54 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "postinstall": "npx husky install"
-  },
-  "dependencies": {
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "^2.38.4",
-    "autoprefixer": "10.4.15",
-    "next": "latest",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
-  },
-  "devDependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.5",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "encoding": "^0.1.13",
-    "eslint": "^8.53.0",
-    "eslint-config-standard-with-typescript": "^39.1.1",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-n": "^16.2.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.0.2",
-    "prettier": "^3.0.3",
-    "supabase": "^1.110.1",
-    "typescript": "^5.2.2"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --config ./.prettierrc.js --write"
-    ],
-    "**/*.{css,scss,md,html,json}": [
-      "prettier --config ./.prettierrc.js --write"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "prepare": "npx husky install",
+        "lint": "eslint --fix"
+    },
+    "dependencies": {
+        "@supabase/ssr": "latest",
+        "@supabase/supabase-js": "^2.38.4",
+        "autoprefixer": "10.4.15",
+        "next": "latest",
+        "postcss": "8.4.29",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "tailwindcss": "3.3.3"
+    },
+    "devDependencies": {
+        "@types/node": "20.3.1",
+        "@types/react": "18.2.8",
+        "@types/react-dom": "18.2.5",
+        "@typescript-eslint/eslint-plugin": "^6.9.1",
+        "commitizen": "^4.3.0",
+        "cz-conventional-changelog": "^3.3.0",
+        "encoding": "^0.1.13",
+        "eslint": "^8.53.0",
+        "eslint-config-standard-with-typescript": "^39.1.1",
+        "eslint-plugin-import": "^2.29.0",
+        "eslint-plugin-n": "^16.2.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.33.2",
+        "husky": "^8.0.3",
+        "lint-staged": "^15.0.2",
+        "prettier": "^3.0.3",
+        "supabase": "^1.110.1",
+        "typescript": "^5.2.2"
+    },
+    "lint-staged": {
+        "**/*.{js,jsx,ts,tsx}": [
+            "eslint --fix",
+            "prettier --config ./.prettierrc.js --write"
+        ],
+        "**/*.{css,scss,md,html,json}": [
+            "prettier --config ./.prettierrc.js --write"
+        ]
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
-  }
 }
